--- a/.env.example
+++ b/.env.example
@@ -1,73 +1,43 @@
-# =================================
-# Property Helper 2025 - Environment Configuration
-# =================================
-# Copy this file to .env.local for development
-# Copy this file to .env.production for production
-
-# Application Environment
-NODE_ENV=development
-APP_NAME="Property Helper 2025"
-APP_VERSION=1.0.0
-APP_URL=http://localhost:3000
-
-# Database Configuration
-DB_URL=postgresql://property_helper_user:property_helper_password@localhost:5432/property_helper_2025
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=property_helper_2025
-DB_USER=property_helper_user
-DB_PASSWORD=property_helper_password
-DB_SSL=false
-
-# Redis Configuration (for caching and sessions)
-REDIS_URL=redis://localhost:6379
-REDIS_PASSWORD=
-
-# Authentication & Security
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
-JWT_EXPIRES_IN=7d
-BCRYPT_ROUNDS=12
-
-# API Configuration
-API_PORT=3001
-API_PREFIX=api
-CORS_ORIGIN=http://localhost:3000
+# Supabase Configuration
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 
 # Frontend Configuration
-NEXT_PUBLIC_API_URL=http://localhost:3001/api
-NEXT_PUBLIC_APP_URL=http://localhost:3000
-NEXT_PUBLIC_APP_ENV=development
+NEXT_PUBLIC_API_URL=https://your-supabase-project.supabase.co/functions/v1
 
-# File Upload Configuration
-UPLOAD_MAX_SIZE=10485760
-UPLOAD_ALLOWED_TYPES=image/jpeg,image/png,image/webp,image/gif,application/pdf
-UPLOAD_PATH=./uploads
-
-# Email Configuration (Optional)
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-app-password
-SMTP_FROM=noreply@propertyhelper2025.com
-
-# Payment Configuration (Optional)
-STRIPE_PUBLISHABLE_KEY=pk_test_...
+# Payment Configuration (Stripe)
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_...
 STRIPE_SECRET_KEY=sk_test_...
 STRIPE_WEBHOOK_SECRET=whsec_...
 
-# Analytics & Monitoring (Optional)
-GOOGLE_ANALYTICS_ID=GA_...
-SENTRY_DSN=
+# Payment Configuration (PayFast)
+PAYFAST_MERCHANT_ID=your-merchant-id
+PAYFAST_MERCHANT_KEY=your-merchant-key
+PAYFAST_PASSPHRASE=your-passphrase
 
-# Third-party Integrations (Optional)
-PROPERTY24_API_KEY=your-property24-api-key
-WHATSAPP_API_KEY=your-whatsapp-api-key
-WHATSAPP_VERIFY_TOKEN=your-verify-token
+# AI Services
+OPENAI_API_KEY=sk-...
+STABILITY_API_KEY=sk-...
+REPLICATE_API_TOKEN=r8_...
 
-# Development Settings
-DEBUG=true
-LOG_LEVEL=info
+# AWS S3 (for file storage fallback)
+AWS_ACCESS_KEY_ID=your-aws-key
+AWS_SECRET_ACCESS_KEY=your-aws-secret
+AWS_S3_BUCKET=your-bucket-name
+AWS_REGION=us-east-1
 
-# Docker Configuration
-COMPOSE_PROJECT_NAME=property-helper-2025
-DOCKER_ENV=development
+# Redis (optional, for caching)
+REDIS_URL=redis://localhost:6379
+
+# Sentry (error monitoring)
+SENTRY_DSN=https://your-sentry-dsn@sentry.io/project-id
+NEXT_PUBLIC_SENTRY_DSN=https://your-sentry-dsn@sentry.io/project-id
+
+# Application Settings
+NODE_ENV=development
+JWT_SECRET=your-super-secret-jwt-key
+FRONTEND_URL=http://localhost:3000
+
+# Database (for local development only)
+DATABASE_URL=postgresql://username:password@localhost:5432/realestate_pro
