--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,11 @@
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.6",
+    "@sentry/nextjs": "^7.114.0",
+    "@sentry/react": "^7.114.0",
+    "@supabase/supabase-js": "^2.39.0",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
@@ -38,10 +43,6 @@
     "tailwindcss": "^3.3.6",
     "typescript": "^5.0.0",
     "zod": "^4.1.11"
-  },
-  "dependencies": {
-    "@sentry/nextjs": "^7.114.0",
-    "@sentry/react": "^7.114.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.0",
