--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
+    "supabase": "^2.47.2",
     "typescript": "^5.3.0"
   },
   "repository": {
